# meme-moderation-app

./: .env  .gitignore  README.md  docker-compose.yml  requests.sh
services/moderator/: Dockerfile  pyproject.toml
services/moderator/app/: consumer.py  kafka_processor.py  main.py  prediction.py  schemas.py  settings.py
services/prediction/: Dockerfile  pyproject.toml
services/prediction-worker/: Dockerfile  pyproject.toml
services/prediction-worker/app/: kafka_processor.py  main.py  redis_client.py  settings.py
services/prediction/app/: kafka_processor.py  main.py  model.py
services/toxic-detector/: Dockerfile  pyproject.toml
services/toxic-detector/app/: model.py  schemas.py  settings.py
services/web/: Dockerfile  pyproject.toml
services/web/app/: app.py  main.py  producer.py  schemas.py  settings.py
