[tool.poetry]
name = "moderator"
version = "0.1.0"
description = ""
authors = ["Kirill Bratsun <kdbratsun@avito.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.19.9"
aiokafka = "^0.12.0"
aioredis = "^2.0.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"