[tool.poetry]
name = "prediction-worker"
version = "0.1.0"
description = ""
authors = ["Kirill Bratsun <kdbratsun@avito.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
aiokafka = "^0.11.0"
aioredis = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
